# eksamen

./: .gitignore  Cargo.toml  flow.md  tables.srql
src/: main.rs  per.rs  utils.rs
